# glean

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  eslint.config.js  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
design/: ascii:-
docs/: RELEASING.md  faq.md  index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: ai-assistant.md  getting-started.md  indexing.md  installation.md  onboarding.md  privacy.md  search.md  settings.md  shortcuts.md  tags.md
screenshots/: README.md
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  rag.rs
src-tauri/src/agent/: history.rs  mod.rs  tools.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/embedding/: mod.rs  worker.rs
src-tauri/src/llm/: mod.rs  openai.rs
src-tauri/src/scanner/: chunker.rs  hash.rs  ignore.rs  metadata.rs  mod.rs  ocr.rs  scheduler.rs  text.rs  walker.rs  watcher.rs
src-tauri/src/search/: hybrid.rs  mod.rs  vector.rs
src/components/: ChatPanel.vue  ContextMenu.vue  DetailPanel.vue  FileList.vue  OnboardingWizard.vue  SearchPalette.vue  SettingsModal.vue  TagBadge.vue  ToastHost.vue
src/locales/: en.json  i18n.ts  zh-CN.json
src/stores/: app.ts  chat.ts  files.ts  search.ts  settings.ts  tags.ts  toast.ts
src/utils/: errors.ts  fileKind.ts  markdown.ts
