[package]
name = "glean"
version = "0.1.0"
description = "Glean - 本地优先、AI 原生的 macOS 文件管理器"
authors = ["jing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glean_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
rusqlite_migration = "2.6.0"
notify = "8.2.0"
walkdir = "2.5.0"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.3"
reqwest = { version = "0.13.4", features = ["json", "rustls", "stream"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
futures = "0.3.32"
jieba-rs = "0.7"
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
fastembed = "5"
sqlite-vec = "0.1"
zerocopy = "0.8"
tauri-plugin-store = "2.4.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"

